Search part 4 (fix bug on tablet and mobile)

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -45,11 +45,11 @@ a {
 }
 
 input,
-button {
+button,
+[tabindex] {
     border: none;
     outline: none;
     font-family: $font-family;
-    background-color: transparent;
 }
 
 .container {
